@@ -135,6 +135,7 @@ abbrev "store"   function_store
 abbrev "purge"   function_purge
 abbrev "gcd"     function_gcd
 abbrev "lcm"     function_lcm
+abbrev "binom"   function_binomial_coeff
 abbrev "drop"    command_drop
 abbrev "clear"   command_clear
 abbrev "swap"    command_swap
